菜单搜索 富文本编辑器

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="vue-element-admin的vue3升级版本" />
     <meta name="keywords" content="vue-element-admin,vue3-element-admin" />
-    <title>vue3-element-admin</title>
+    <title>vue3Admin</title>
   </head>
   <body>
     <div id="app"></div>
